# ContextBrain

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docs/: architecture.md
frontend/: App.jsx
sample_specs/: claims_processing_api.json  member_eligibility_api.json  prior_authorization_api.json  provider_network_api.json
scripts/: init_db.py  seed_sample_apis.py
src/: __init__.py  config.py  database.py  main.py
src/models/: __init__.py  api_catalog.py
src/routers/: annotations.py  chat.py  ingest.py  search.py
src/schemas/: __init__.py
src/services/: __init__.py  chat.py  embedding.py  ingestion.py  search.py  vectorstore.py
src/utils/: openapi_parser.py
tests/: __init__.py  test_parser.py
